--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: space-between  ;
     box-shadow: 0px 3px 0px rgba(0, 0, 0, 0.12);
-    padding: 0 100px;
+    padding: 0 50px;
     z-index: 999;
 
     &_logo {
@@ -25,7 +25,6 @@
 
 .navbar {
     display: flex;
-    gap: 100px;
     
     &_list {
         display: flex;
@@ -61,30 +60,16 @@
     }
 }
 
-// .contactbar {
-//         display: flex;
-//         list-style: none;
-//         gap: 50px;
+@media screen and (max-width: 1300px) {
 
-//     &_item {
-//         text-decoration: none;
-//         color: #757575; 
-//         fill: #757575;
-//         font-family: 'Roboto';
-//         font-style: normal;
-//         font-weight: 500;
-//         font-size: 14px;
-//         line-height: 16px;
-//         letter-spacing: 0.02em;
+    .header {
+        padding: 0 20px;
+    }
+    
+    .navbar {
+        &_list {
+            gap: 25px;
+        }
+    }
+}
 
-//         &:hover {
-//             color: getColor('titles');
-//             fill: getColor('titles');
-//         }
-//     }
-
-//     &_icon {
-//         width: 16px;
-//         height: 12px;
-//     }
-// }
