fix numbers relative

--- a/assets/css/cabildos.scss
+++ b/assets/css/cabildos.scss
@@ -159,21 +159,21 @@
     &_1{
         position: absolute;
         z-index: 10;
-        top: 530px;
+        top: 64%;
         left: 23%;
     }
 
     &_2{
         position: absolute;
         z-index: 10;
-        top: 180px;
+        top: 22%;
         left: 50%;
     }
 
     &_3{
         position: absolute;
         z-index: 10;
-        top: 278px;
+        top: 33%;
         left: 76%;
     }
 }
