--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -269,19 +269,19 @@
 .datalabel_1 {
   position: absolute;
   z-index: 10;
-  top: 530px;
+  top: 64%;
   left: 23%;
 }
 .datalabel_2 {
   position: absolute;
   z-index: 10;
-  top: 180px;
+  top: 22%;
   left: 50%;
 }
 .datalabel_3 {
   position: absolute;
   z-index: 10;
-  top: 278px;
+  top: 33%;
   left: 76%;
 }
 
