--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,19 +15,16 @@
   align-items: center;
   justify-content: space-between;
   box-shadow: 0px 3px 0px rgba(0, 0, 0, 0.12);
-  padding: 0 100px;
+  padding: 0 50px;
   z-index: 999;
 }
-.header_logo {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 31px;
-  /* identical to box height */
-  text-align: right;
-  letter-spacing: 0.03em;
-  color: #D41443;
+.header_logos {
+  display: flex;
+  gap: 20px;
+}
+
+.logo {
+  height: 60px;
 }
 
 .navbar {
