--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -29,7 +29,7 @@
     &_list {
         display: flex;
         list-style: none;
-        gap: 20px;
+        gap: 50px;
     }
 
     &_page{
@@ -66,10 +66,8 @@
         padding: 0 10px;
     }
     
-    .navbar {
-        &_list {
-            gap: 10px;
-        }
+    .navbar_list {
+        gap: 20px;
     }
 }
 
