--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -13,9 +13,11 @@
   width: 100%;
   height: 100%;
   z-index: 5;
+  padding-top: 90px;
 }
 
 .modal {
+  width: 70%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -45,6 +47,9 @@
     /* identical to box height */
     letter-spacing: 0.04em;
     list-style:inside;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 }
 
@@ -112,7 +117,7 @@
   
   .btn-ppal {
     width: 261px;
-    height: 50px;
+    height: 65px;
     background-color: getColor('titles');
   
     font-family: "Roboto";
@@ -306,5 +311,37 @@
   &_list > dt {
     font-weight: bold;
   }
+
+}
+
+@media screen and (max-width: 1300px) {
+
+.text-ppal {
+      width: 60%;
+}
+
+.metodos {
+  gap: 20px;
+}
+
+}
+
+@media screen and (max-width: 1300px) {
+
+.text-ppal {
+    width: 75%;
+  }
+
+  .metodos {
+
+    &_card {
+          width: 300px;
+          height: 200px;
+  }
+}
+
+.modal {
+  width: 80%;
+}
 
 }
