--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -60,7 +60,7 @@
     }
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1300px) and (min-width: 1151px) {
 
 .header {
     padding: 0 10px;
@@ -74,6 +74,20 @@
     &_page {
         font-size: 13px;
     }
+}
+}
+
+@media screen and (max-width: 1150px) and (min-width: 721px) {
+
+.header {
+    display: none;
+}
+}
+
+@media screen and (max-width: 720px) and (min-width: 320px) {
+
+.header {
+        display: none;
 }
 
 }
