--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -244,3 +244,17 @@ tr {
       fill: getColor('titles');
     }
   }
+
+@media screen and (max-width: 720px) and (min-width: 320px) {
+
+.section-tittle {
+  font-size: 28px;
+  line-height: 32px;
+  letter-spacing: 0.02em;
+}
+
+.footer {
+  flex-direction: column;
+}
+
+}
