--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,6 +24,10 @@
   gap: 20px;
 }
 
+.menu {
+  display: none;
+}
+
 .logo {
   height: 60px;
   max-width: 200px;
@@ -76,12 +80,131 @@
 }
 @media screen and (max-width: 1150px) and (min-width: 721px) {
   .header {
-    display: none;
+    padding: 0 20px;
+  }
+  .menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    border: 1px solid #D41443;
+    padding: 5px;
+    border-radius: 45px;
+    fill: #D41443;
+  }
+  .menu:active {
+    animation-duration: 0.5s;
+    animation-iteration-count: 1;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+    background-color: #D41443;
+    fill: #FFFFFF;
+    scale: 1.1;
+  }
+  .menu_icon {
+    width: 40px;
+    height: 40px;
+  }
+  .logo {
+    max-width: 180px;
+  }
+  .navbar {
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.35);
+    backdrop-filter: blur(15px);
+    width: 100%;
+    height: calc(100vh - 80px);
+    top: 80px;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    margin-left: -100%;
+    transition: all 0.5s ease;
+  }
+  .navbar.mobile-menu {
+    margin-left: 0;
+  }
+  .navbar_list {
+    gap: 50px;
+    width: 70%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .navbar_page {
+    font-size: 1.5em;
+    color: #000000;
+    font-weight: 700;
+    line-height: 15px;
+  }
+  .navbar .current {
+    color: #D41443;
   }
 }
-@media screen and (max-width: 720px) and (min-width: 320px) {
+@media screen and (max-width: 720px) and (min-width: 450px) {
   .header {
-    display: none;
+    padding: 0 10px;
+  }
+  .menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    border: 1px solid #D41443;
+    padding: 5px;
+    border-radius: 45px;
+    fill: #D41443;
+    position: absolute;
+    left: calc(50% - 30px);
+  }
+  .menu:active {
+    animation-duration: 0.5s;
+    animation-iteration-count: 1;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+    background-color: #D41443;
+    fill: #FFFFFF;
+    scale: 1.1;
+  }
+  .menu_icon {
+    width: 40px;
+    height: 40px;
+  }
+  .logo {
+    height: 50px;
+    max-width: 150px;
+  }
+  .navbar {
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.35);
+    backdrop-filter: blur(15px);
+    width: 100%;
+    height: calc(100vh - 80px);
+    top: 80px;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    margin-left: -100%;
+    transition: all 0.5s ease;
+  }
+  .navbar.mobile-menu {
+    margin-left: 0;
+  }
+  .navbar_list {
+    gap: 50px;
+    width: 70%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .navbar_page {
+    font-size: 1.5em;
+    color: #000000;
+    font-weight: 700;
+    line-height: 15px;
+  }
+  .navbar .current {
+    color: #D41443;
   }
 }
 .bg-pink {
@@ -786,7 +909,21 @@
     letter-spacing: 0.02em;
   }
   .modal {
-    width: 80%;
+    width: 85%;
+    gap: 10px;
+    padding: 20px;
+    overflow-y: scroll;
+  }
+  .modal_title {
+    font-size: 18px;
+    margin-bottom: 12px;
+  }
+  .modal_info {
+    text-align: left;
+    font-size: 15px;
+    line-height: 20px;
+    letter-spacing: 0.02em;
+    gap: 10px;
   }
 }
 .enfoques {
