--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -389,7 +389,6 @@
 @media screen and (max-width: 720px) and (min-width: 320px) {
 
 
-
 //Sección Hero
 .banner-ppal{
   height: 350px;
@@ -450,7 +449,23 @@
 
 //modal
 .modal {
-  width: 80%;
+  width: 85%;
+  gap: 10px;
+  padding: 20px;
+  overflow-y: scroll;
+
+  &_title {
+    font-size: 18px;
+    margin-bottom: 12px;
+  }
+
+  &_info {
+    text-align: left;
+    font-size: 15px;
+    line-height: 20px;
+    letter-spacing: 0.02em;
+    gap: 10px;
+  }
 }
 
 }
