--- a/assets/css/galeria.scss
+++ b/assets/css/galeria.scss
@@ -14,6 +14,7 @@
 
         &:hover {
             transform: scale(1.1) ;
+            transition: all 0.5s ease;
             box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
         }
     }
