--- a/assets/css/componentes.scss
+++ b/assets/css/componentes.scss
@@ -148,4 +148,24 @@
     }
 }
 
+@media screen and (max-width: 720px) and (min-width: 320px) {
 
+.content {
+    width: 100%;
+}
+.componentes {
+
+    &_objetivos {
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    &_descripcion {
+        width: 100%;
+        flex-direction: column;
+        gap: 30px;
+        padding: 30px 0px;
+    }
+}
+
+}
