--- a/assets/css/delphis.scss
+++ b/assets/css/delphis.scss
@@ -3,7 +3,7 @@
 }
 
 .expertos {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     padding-bottom: 50px;
 
@@ -54,3 +54,47 @@
     }
 }
 
+@media screen and (max-width: 720px) and (min-width: 320px) {
+
+.delphis {
+width: 100%;
+flex-direction: column;
+justify-content: center;
+text-align: center;
+align-items: center;
+gap: 20px;
+padding: 30px 10px;
+
+&_info {
+    width: 90%;
+}
+
+&_text {
+font-size: 16px;
+line-height: 22px;
+/* identical to box height */
+letter-spacing: 0.02em;
+}
+}
+
+.expertos {
+    width: 80%;
+    margin: 0 auto;
+    padding-bottom: 50px;
+
+    &_subtitle {
+        font-size: 22px;
+        line-height: 34px;
+        letter-spacing: 0.04em;
+        color: getColor("subtitles");
+    }
+
+    &_text {
+        text-align: justify;
+        font-size: 16px;
+        line-height: 22px;
+        /* identical to box height */
+        letter-spacing: 0.02em;
+    }
+}
+}
