--- a/assets/css/enfoques.scss
+++ b/assets/css/enfoques.scss
@@ -51,3 +51,28 @@
         letter-spacing: 0.04em;
     }
 }
+
+@media screen and (max-width: 720px) and (min-width: 320px) {
+
+.enfoques {
+    width: 90%;
+    margin: 0 auto;
+    padding: 50px 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+
+    &_text {
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+    }
+
+    &_tbl {
+        margin-left: -20px;
+        font-size: 10px;
+        line-height: 13px;
+        letter-spacing: 0;
+    }
+}
+}
