--- a/assets/css/componentes.scss
+++ b/assets/css/componentes.scss
@@ -150,22 +150,88 @@
 
 @media screen and (max-width: 720px) and (min-width: 320px) {
 
+    
+.header {
+        width: 100vw;
+        margin: 0;
+    padding:0 10px;
+}
+
+
 .content {
     width: 100%;
 }
+
 .componentes {
+    width: 100%;
 
     &_objetivos {
         flex-direction: column;
         gap: 30px;
     }
-
+    
     &_descripcion {
         width: 100%;
         flex-direction: column;
         gap: 30px;
         padding: 30px 0px;
     }
+}
+
+.dinColectiva {
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    &_title {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    &_subtitle {
+        width: 90%;
+        font-size: 18px;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+    }
+
+    &_info {
+        width: 80%;
+        margin: 0 auto;
+        padding: 30px 0;
+        font-size: 16px;
+        line-height: 22px;
+        /* identical to box height */
+        letter-spacing: 0.02em;
+    }
+
+    &_afectos {
+        background-color: getColor('white');
+        width: 100%;
+        padding: 30px 20px;
+        text-align: center;
+    }
+
+    &_tbl {
+        width: 80%;
+        font-size: 12px;
+        line-height: 18px;
+        /* identical to box height */
+        letter-spacing: 0.02em;
+        margin: 0 auto;
+    }
+
+    &_img {
+        margin: 0 auto;
+        width: 50%;
+    }
+}
+
+p {
+    font-size: 16px;
+    line-height: 22px;
+    /* identical to box height */
+    letter-spacing: 0.02em;
 }
 
 }
