--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -143,8 +143,7 @@
 }
 @media screen and (max-width: 720px) and (min-width: 320px) {
   .header {
-    padding: 0 5px;
-    gap: 5px;
+    padding: 0 20px;
   }
   .header_logos {
     gap: 5px;
@@ -180,19 +179,21 @@
     max-width: 100px;
   }
   .navbar {
+    width: 100%;
+    height: 100vh;
     position: absolute;
     background-color: rgba(255, 255, 255, 0.35);
     backdrop-filter: blur(15px);
-    width: 100%;
     height: calc(100vh - 80px);
     top: 80px;
-    left: 0;
+    left: 0px;
     justify-content: center;
     align-items: center;
     margin-left: -100%;
     transition: all 0.5s ease;
   }
   .navbar.mobile-menu {
+    width: 100%;
     margin-left: 0;
   }
   .navbar_list {
@@ -658,7 +659,15 @@
 }
 
 @media screen and (max-width: 720px) and (min-width: 320px) {
+  .header {
+    width: 100vw;
+    margin: 0;
+    padding: 0 10px;
+  }
   .content {
+    width: 100%;
+  }
+  .componentes {
     width: 100%;
   }
   .componentes_objetivos {
@@ -670,6 +679,54 @@
     flex-direction: column;
     gap: 30px;
     padding: 30px 0px;
+  }
+  .dinColectiva {
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .dinColectiva_title {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .dinColectiva_subtitle {
+    width: 90%;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+  }
+  .dinColectiva_info {
+    width: 80%;
+    margin: 0 auto;
+    padding: 30px 0;
+    font-size: 16px;
+    line-height: 22px;
+    /* identical to box height */
+    letter-spacing: 0.02em;
+  }
+  .dinColectiva_afectos {
+    background-color: #FFFFFF;
+    width: 100%;
+    padding: 30px 20px;
+    text-align: center;
+  }
+  .dinColectiva_tbl {
+    width: 80%;
+    font-size: 12px;
+    line-height: 18px;
+    /* identical to box height */
+    letter-spacing: 0.02em;
+    margin: 0 auto;
+  }
+  .dinColectiva_img {
+    margin: 0 auto;
+    width: 50%;
+  }
+  p {
+    font-size: 16px;
+    line-height: 22px;
+    /* identical to box height */
+    letter-spacing: 0.02em;
   }
 }
 .backdrop {
