--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -182,8 +182,8 @@
     width: 100%;
     height: 100vh;
     position: absolute;
-    background-color: rgba(255, 255, 255, 0.35);
-    backdrop-filter: blur(15px);
+    background-color: rgba(255, 255, 255, 0.45);
+    backdrop-filter: blur(35px);
     height: calc(100vh - 80px);
     top: 80px;
     left: 0px;
@@ -610,6 +610,7 @@
 }
 .bienestarSubjetivo_img {
   width: 70%;
+  margin: 0 auto;
 }
 
 .dinColectiva {
